# coursera_microsoft_python_dev

./: .gitignore  pyproject.toml
c01_fundamentals_python/: _01_hello_world.py  _02_introduction.py  _03_exercise.py  _04_challenge_for.py  _05_challenge_for.py  _06_challenge_for.py  _07_example_function.py  _08_challenge_variable_loops.py  _09_introduction_lists.py  _10_functions.py  _11_classes.py  _12_builtin_functions.py  _13_modules.py  _14_scope.py  _15_custom_classes.py  _16_challenge_classes.py  _19_challenge_function.py  _20_challenge_modules.py  _21_challenge_functional_code.py  _22_variable_arguments.py  _24_modules_builtin.py  _25_challenge_dict_student.py  _26_challenge_ds.py  _27_desafio_diccionarios.py  _28_desafio_listas_sets.py  _29_linear_search.py  _30_binary_search.py  _31_sorting_algorithms_example.py  _32_selection_of_ds.py  _33_estructuras_alternativas.py  _34_exceptions.py  _35_challenge_exceptions.py  _37_logging.py  _38_try_except_else_finally.py  _39_custom_exceptions.py  _40_test_debugger.py  _41_challenge_debugging.py  _42_challenge_debugging.py  _43_unit_testing.py  _44_pytest.py  (+4 more)
c02_intro_data_analysis/: _01_introduction.py  _02_data_science_vs_data_analysis.py  _03_key_concepts.py  _04_data_frames.py  _05_example_data_frame.py  _06_data_governance.py  _07_programmer_responsibilities.py  _08_datasets.py  _09_limpieza_de_datos.py  _10_dataframes.py  _11_indexing.py  _12_head_info_describe.py  _13_data_transformations.py  _14_cheat_sheet_creation.py  _15_cheat_sheet_inspection.py  _16_filter.py  _17_data_not_available.py  _18_transform_data.py  (+1 more)
(+89 files in other folders)
