[project]
name = "microsoftpythondeveloper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "textblob>=0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
