[project]
name = "microsoftpythondeveloper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "flask>=3.1.3",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "scrapy>=2.14.1",
    "textblob>=0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
